src/objects/RFP_Process__c.object
<CustomObject>
    <description>This object is used to track the RFP Process for SALT opportunities.</description>
    <fields>
        <fullName>RAE_for_Account__c</fullName>
        <formula>(RFP_Account__r.Regional_Account_Executive__r.FirstName)+ &quot; &quot; + (RFP_Account__r.Regional_Account_Executive__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RAE for Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFP_2nd_Round__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box becomes ticked once a Request for Proposal has entered the second round.</description>
        <inlineHelpText>This box becomes ticked once a Request for Proposal has entered the second round.</inlineHelpText>
        <label>RFP 2nd Round</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RFP_Account__c</fullName>
        <inlineHelpText>This is the Account for which the RFP is being processed.</inlineHelpText>
        <label>RFP Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RFP Processes</relationshipLabel>
        <relationshipName>RFP_Processes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RFP_Due_Date__c</fullName>
        <label>RFP Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFP_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RFP Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RFP_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RFP_Loss_Reason_s__c</fullName>
        <label>RFP Loss Reason(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Legal Issues</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RFP_Received_Date__c</fullName>
        <label>RFP Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFP_Source__c</fullName>
        <label>RFP Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Representative</fullName>
                </value>
                <value>
                    <fullName>RFP.com</fullName>
                </value>
                <value>
                    <fullName>Client Generated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RFP_Status__c</fullName>
        <label>RFP Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Receipt of the Request for RFP</fullName>
                </value>
                <value>
                    <fullName>Approval to Respond to RFP</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Response to RFP Sent</fullName>
                </value>
                <value>
                    <fullName>Invited to Participate in 2nd Round</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RFP_Type__c</fullName>
        <label>RFP Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reactive</fullName>
                </value>
                <value>
                    <fullName>Proactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RFP_Value__c</fullName>
        <description>Estimated value of proposal.</description>
        <label>RFP Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RFP_Win_Reason_s__c</fullName>
        <inlineHelpText>This field indicates the reason(s) by which the RFP was won.</inlineHelpText>
        <label>RFP Win Reason(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Functionality</fullName>
                </value>
                <value>
                    <fullName>RAE Relationship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RFP_Winner__c</fullName>
        <inlineHelpText>Provide the name of the institution that won the RFP.</inlineHelpText>
        <label>RFP Winner</label>
        <type>TextArea</type>
    </fields>
    <label>RFP Process</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RFP_Type__c</columns>
        <columns>RAE_for_Account__c</columns>
        <columns>NAME</columns>
        <columns>RFP_Lead__c</columns>
        <columns>RFP_Status__c</columns>
        <columns>RFP_Received_Date__c</columns>
        <columns>RFP_Due_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>RFP_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>RFP Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RFP Processes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>